@@ -8,7 +8,7 @@ wrapper {
 }
 
 mainClassName = 'mqttloader.Loader'
-applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=src/dist/logging.properties', '-Dfile.encoding=UTF-8', '--illegal-access=deny']
+applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=src/dist/logging.properties', '-Dfile.encoding=UTF-8', '--illegal-access=deny', '--add-opens=java.base/java.net=ALL-UNNAMED']
 
 repositories {
     mavenCentral()
@@ -27,7 +27,6 @@ compileJava {
 
 run {
     args '-h'.split('\\s+')
-//    args '-b ssl://test.mosquitto.org:8884 -p 1 -s 1 -m 10 -tl'.split('\\s+')
 }
 
 CreateStartScripts startScripts = project.startScripts
